--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
   box-shadow: 0 10px 30px rgba(0,0,0,0.1);
   display: flex;
   flex-direction: column;
+  min-height: 80vh;
 }
 
 hr {
@@ -263,4 +264,6 @@ canvas {
 .logout-btn {
   margin-top: auto;  
 }
-
+.spacer {
+  flex: 1;
+}
