--- a/css/style.css
+++ b/css/style.css
@@ -77,34 +77,17 @@ textarea:focus {
   margin-right: 6px;
 }
 
-/* Signature 
-canvas {
-  width: 100%;
-  height: 190px;
-  border: 2px dashed #c7c7c7;
-  border-radius: 8px;
-  margin-top: 10px;
-  touch-action: none;
-}*/
-
 /* Signature */
 canvas {
   width: 100%;
   height: 190px;
-
-  /* Visual */
-  background-color: #ffffff;          /* pure white */
+  background-color: #ffffff; 
   border: 2px dashed #c7c7c7;
-  border-radius: 12px;
+  border-radius: 8px;
   margin-top: 10px;
-
-  /* UX */
-  box-shadow: inset 0 1px 3px rgba(0,0,0,0.08);
-  cursor: crosshair;
-
-  /* Mobile fix */
   touch-action: none;
 }
+
 
 /* Buttons */
 button {
