--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@ canvas {
   top: -1px;
   left: 2.5px;
   font-size: 18px;
-  color:#FFFFFF;
+  color:#800020;
  /* color: #1976d2;*/
 }
 @media (max-width: 768px) {
