--- a/css/style.css
+++ b/css/style.css
@@ -264,8 +264,7 @@ canvas {
   top: -1px;
   left: 2.5px;
   font-size: 18px;
-  color:#800020;
- /* color: #1976d2;*/
+  color: #1976d2;
 }
 @media (max-width: 768px) {
   .form-container {
