--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ hr {
 label {
   display: block;
   margin-top: 15px;
-  font-weight: 600;
+  font-weight: 500;
   color: #374151;
 }
 
@@ -200,12 +200,12 @@ button.secondary {
   touch-action: none;
 }
 
-.section {
+/*.section {
   margin: 18px 0;
   padding: 12px;
   background: #fcf2f2;
   border-left: 4px solid #660202;
-}
+}*/
 
 .section h3 {
   margin: 0 0 10px;
