--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ canvas {
   top: -1px;
   left: 2.5px;
   font-size: 18px;
-  color: #1976d2;
+  color: #8b2d2d;
 }
 @media (max-width: 768px) {
   .form-container {
