--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ button.secondary {
 /* logo */
  .logo {
     display: block;          /* makes image behave like a block */
-    margin: 20px auto;       /* auto left & right centers it */
+    margin: 20px auto 10px auto;;       /* auto left & right centers it */
     width: 120px;            /* adjust size */
 }
 
