--- a/css/style.css
+++ b/css/style.css
@@ -259,10 +259,8 @@ canvas {
 
 .radio-box input {
   appearance: none;
-  width: 10px !important;
-  height: 10px !important;
-  min-width: 10px !important;
-  min-height: 10px !important;
+  width: 12px;
+  height: 12px;
   border: 2px solid #5E5E5E;
   /*border: 2px solid #1976d2;*/
   border-radius: 3px;
