--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ button.secondary {
   background: #f9fbff;
 }*/
 .section {
-  background: white;
+  background: #fcd7e9;
   padding: 20px;
   border-radius: 16px;
   /*box-shadow: 6px 10px 24px rgba(0, 0, 0, 0.12);*/
